k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: devops
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flask-svc
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: flask-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-svc
                port:
                  number: 80
